--- a/0. Test/source/sass/global.scss
+++ b/0. Test/source/sass/global.scss
@@ -66,7 +66,7 @@ body {
 
 @media (min-width: $desktop-width) {
   body {
-    min-width: $desktop-width;
+    min-width: 1360px;
   }
 
   .site-wrapper {
