--- a/0. Test/source/sass/blocks/main-header.scss
+++ b/0. Test/source/sass/blocks/main-header.scss
@@ -1,21 +1,10 @@
 .main-header {
-  min-height: 800px;
+  @include flex(flex, column);
+  min-height: 100vh;
   background-image: url("../img/background.jpg");
   background-color: $background-color;
-  background-size: 1440px 100%;
+  background-size: cover;
   background-attachment: fixed;
   background-position: 50% 0;
   background-repeat: no-repeat;
-}
-
-@media (min-width: $tablet-width) {
-  .main-header {
-    min-height: 600px;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .main-header {
-    background-size: 100% 100%;
-  }
 }
