--- a/0. Test/source/sass/blocks/special.scss
+++ b/0. Test/source/sass/blocks/special.scss
@@ -5,7 +5,7 @@
   background-image: url("../img/background-2.jpg");
   background-color: $background-color;
   background-attachment: fixed;
-  background-size: 1440px 100%;
+  background-size: cover;
   background-position: 50% 0;
   background-repeat: no-repeat;
   text-align: center;
@@ -53,7 +53,6 @@
 @media (min-width: $desktop-width) {
   .special {
     min-height: 645px;
-    background-size: 100% 100%;
   }
 
   .special__title {
