--- a/1. First task/source/sass/variables.scss
+++ b/1. First task/source/sass/variables.scss
@@ -2,6 +2,8 @@ $font-crimson: "Crimson Text", "Times New Roman", serif;
 $font-montserrat: "Montserrat", "Arial", sans-serif;
 $font-normal: 400;
 $font-black: 900;
+$style-normal: normal;
+$style-italic: italic;
 $body-font-size: 14px;
 $body-line-height: 24px;
 $link-hover: #ff8b00;
@@ -11,6 +13,7 @@ $nav-color: #b9bed1;
 $search-placeholder-color: #b9bfd3;
 $sort-color: #a1a8bd;
 $slider-bg: #1c1e23;
+$slider-button-color: #2754eb;
 $footer-bg: #222328;
 $text-white: white;
 $text-black: black;
