--- a/1. First task/source/sass/style.scss
+++ b/1. First task/source/sass/style.scss
@@ -2,3 +2,9 @@
 @import "mixin.scss";
 @import "normalize.scss";
 @import "global.scss";
+@import "blocks/main-header";
+@import "blocks/main-navigation";
+@import "blocks/company-list.scss";
+@import "blocks/category-list.scss";
+@import "blocks/slider.scss";
+
