--- a/1. First task/source/sass/blocks/main-navigation.scss
+++ b/1. First task/source/sass/blocks/main-navigation.scss
@@ -37,7 +37,7 @@
 
   &--support {
     width: 300px;
-    padding-left: 8px;
+    padding-left: 6px;
   }
 }
 
@@ -111,6 +111,7 @@
     @include flex;
     justify-content: center;
     align-items: center;
+    font-size: $body-font-size - 2px;
     width: 84px;
     min-height: 32px;
     margin-right: 2px;
@@ -128,7 +129,7 @@
 
   &--support {
     color: $nav-color;
-    letter-spacing: 0.1px;
+    letter-spacing: 0.7px;
 
     &::before,
     &::after {
