--- a/1. First task/source/sass/style.scss
+++ b/1. First task/source/sass/style.scss
@@ -6,5 +6,13 @@
 @import "blocks/main-navigation";
 @import "blocks/company-list.scss";
 @import "blocks/category-list.scss";
+@import "blocks/main.scss";
 @import "blocks/slider.scss";
+@import "blocks/filter.scss";
+@import "blocks/sidebar.scss";
+@import "blocks/categories.scss";
+@import "blocks/available.scss";
+@import "blocks/brands.scss";
+@import "blocks/condition.scss";
+@import "blocks/delivery.scss";
 
