--- a/1. First task/source/sass/variables.scss
+++ b/1. First task/source/sass/variables.scss
@@ -1,6 +1,8 @@
 $font-crimson: "Crimson Text", "Times New Roman", serif;
 $font-montserrat: "Montserrat", "Arial", sans-serif;
-$font-normal: 400;
+$font-regular: 400;
+$font-medium: 500;
+$font-semibold: 600;
 $font-black: 900;
 $style-normal: normal;
 $style-italic: italic;
@@ -13,6 +15,7 @@ $nav-color: #b9bed1;
 $search-placeholder-color: #b9bfd3;
 $sort-color: #a1a8bd;
 $slider-bg: #1c1e23;
+$main-bg: #e4e5e7;
 $slider-button-color: #2754eb;
 $footer-bg: #222328;
 $text-white: white;
