--- a/1. First task/source/sass/blocks/delivery.scss
+++ b/1. First task/source/sass/blocks/delivery.scss
@@ -74,11 +74,11 @@
   }
 }
 
-.delivery__item label[for=delivery-free] {
+.delivery__item label[for="delivery-free"] {
   margin-right: 7px;
 }
 
-.delivery__item label[for=delivery-cost] {
+.delivery__item label[for="delivery-cost"] {
   margin-right: 2px;
 }
 
