--- a/1. First task/source/sass/style.scss
+++ b/1. First task/source/sass/style.scss
@@ -15,4 +15,8 @@
 @import "blocks/brands.scss";
 @import "blocks/condition.scss";
 @import "blocks/delivery.scss";
-
+@import "blocks/goods.scss";
+@import "blocks/paginator.scss";
+@import "blocks/popular.scss";
+@import "blocks/feedback.scss";
+@import "blocks/main-footer.scss";
