--- a/1. First task/source/sass/variables.scss
+++ b/1. First task/source/sass/variables.scss
@@ -12,6 +12,7 @@ $link-hover: #ff8b00;
 $link-active: rgba(#ff8b00, 0.6);
 $text-color: #343e5c;
 $nav-color: #b9bed1;
+$good-title-color: #1c1e23;
 $search-placeholder-color: #b9bfd3;
 $sort-color: #a1a8bd;
 $slider-bg: #1c1e23;
