--- a/1. First task/source/sass/blocks/main.scss
+++ b/1. First task/source/sass/blocks/main.scss
@@ -3,7 +3,7 @@
   padding-bottom: 51px;
   background-color: $main-bg;
 
-  &--goods {
+  &--container {
     @include flex;
     justify-content: space-between;
     padding-top: 0;
