--- a/1. First task/source/sass/blocks/category-list.scss
+++ b/1. First task/source/sass/blocks/category-list.scss
@@ -20,3 +20,21 @@
     color: $text-color;
   }
 }
+
+// *:hover
+.category-list__item:hover .category-list__link {
+  color: $text-black;
+
+  &--active {
+    color: $text-color;
+  }
+}
+
+// *:active
+.category-list__item:active .category-list__link {
+  color: rgba($text-black, 0.7);
+
+  &--active {
+    color: $text-color;
+  }
+}
