--- a/1. First task/source/sass/blocks/delivery.scss
+++ b/1. First task/source/sass/blocks/delivery.scss
@@ -18,6 +18,7 @@
 .delivery__list {
   @include flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   min-height: 47px;
   border-top: 1px solid #f0f2f7;
 }
@@ -57,8 +58,8 @@
   &::before {
     top: 2px;
     left: -30px;
-    width: 14px;
-    height: 14px;
+    width: 18px;
+    height: 18px;
     border: 2px solid #e4e8f0;
   }
 
