--- a/1. First task/source/sass/blocks/slider.scss
+++ b/1. First task/source/sass/blocks/slider.scss
@@ -93,6 +93,7 @@
   background-color: transparent;
   border: 2px solid rgba($text-white, 0.5);
   border-radius: 50%;
+  cursor: pointer;
 }
 
 .slider__button-item input:checked + label {
@@ -134,4 +135,26 @@
       transform: rotate(-90deg);
     }
   }
+}
+
+// *:hover
+.slider__button-item input:hover + label {
+  background-color: rgba($text-white, 0.5);
+}
+
+.slider__content-link:hover {
+  background-color: rgba($slider-button-color, 0.7);
+}
+
+.slider__button:hover {
+  border-color: $text-white;
+}
+
+// *:active
+.slider__content-link:active {
+  background-color: rgba($slider-button-color, 0.5);
+}
+
+.slider__button:active {
+  border-color: $text-white;
 }
