--- a/1. First task/source/sass/blocks/filter.scss
+++ b/1. First task/source/sass/blocks/filter.scss
@@ -100,12 +100,12 @@
   border: 1px solid #e3e8f0;
   border-radius: 16px;
 
-  &:nth-child(1) {
+  &:nth-of-type(1) {
     margin-left: 12px;
     margin-right: 5px;
   }
 
-  &:nth-child(2) {
+  &:nth-of-type(2) {
     margin-left: 6px;
     margin-right: 5px;
   }
