fixed some mistakes

--- a/1. First task/source/sass/blocks/filter.scss
+++ b/1. First task/source/sass/blocks/filter.scss
@@ -48,7 +48,7 @@
   font-weight: $font-semibold;
   width: 118px;
   min-height: 26px;
-  padding: 0 15px;
+  padding: 10px 15px;
   color: $text-color;
   background-color: transparent;
   border: none;
@@ -141,7 +141,7 @@
   font-weight: $font-semibold;
   width: 59px;
   min-height: 26px;
-  padding-left: 14px;
+  padding: 10px 0 10px 14px;
   color: $text-color;
   background-color: transparent;
   border: none;
