--- a/2. Second task/source/sass/global.scss
+++ b/2. Second task/source/sass/global.scss
@@ -1,55 +1,37 @@
 @font-face {
-  font-family: "Crimson Text";
-  src: url("../fonts/CrimsonText-Roman.woff2") format("woff2"),
-    url("../fonts/CrimsonText-Roman.woff") format("woff");
+  font-family: "Source Sans Pro";
+  src: url("../fonts/SourceSansPro-Regular.woff2") format("woff2"),
+    url("../fonts/SourceSansPro-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Crimson Text";
-  src: url("../fonts/CrimsonText-Italic.woff2") format("woff2"),
-    url("../fonts/CrimsonText-Italic.woff") format("woff");
-  font-weight: 400;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Montserrat";
-  src: url("../fonts/Montserrat-Medium.woff2") format("woff2"),
-    url("../fonts/Montserrat-Medium.woff") format("woff");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Montserrat";
-  src: url("../fonts/Montserrat-SemiBold.woff2") format("woff2"),
-    url("../fonts/Montserrat-SemiBold.woff") format("woff");
+  font-family: "Source Sans Pro";
+  src: url("../fonts/SourceSansPro-SemiBold.woff2") format("woff2"),
+    url("../fonts/SourceSansPro-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Montserrat";
-  src: url("../fonts/Montserrat-Black.woff2") format("woff2"),
-    url("../fonts/Montserrat-Black.woff") format("woff");
-  font-weight: 900;
+  font-family: "Actor";
+  src: url("../fonts/Actor-Regular.woff2") format("woff2"),
+    url("../fonts/Actor-Regular.woff") format("woff");
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 body {
-  font-family: $font-montserrat;
+  font-family: $font-sanspro;
   font-size: $body-font-size;
   line-height: $body-line-height;
-  font-weight: $font-semibold;
+  font-weight: $font-regular;
   font-style: $style-normal;
-  min-width: 1400px;
+  min-width: 320px;
 }
 
 .visually-hidden {
@@ -63,7 +45,7 @@ body {
 }
 
 .site-wrapper {
-  width: 1170px;
+  width: 300px;
   margin: 0 auto;
   padding: 0;
 }
