--- a/2. Second task/source/sass/variables.scss
+++ b/2. Second task/source/sass/variables.scss
@@ -1,14 +1,11 @@
 // font-family
-$font-crimson: "Crimson Text", "Times New Roman", serif;
-$font-montserrat: "Montserrat", "Arial", sans-serif;
+$font-sanspro: "Source Sans Pro", "Arial", sans-serif;
+$font-actor: "Actor", "Arial", sans-serif;
 // font-weight
 $font-regular: 400;
-$font-medium: 500;
 $font-semibold: 600;
-$font-black: 900;
 // font-style
 $style-normal: normal;
-$style-italic: italic;
 // font-size && line-height
 $body-font-size: 14px;
 $body-line-height: 24px;
