--- a/2. Second task/source/sass/style.scss
+++ b/2. Second task/source/sass/style.scss
@@ -2,4 +2,6 @@
 @import "mixin.scss";
 @import "normalize.scss";
 @import "global.scss";
+@import "blocks/main-header.scss";
+@import "blocks/main-navigation.scss";
 
