--- a/2. Second task/source/sass/global.scss
+++ b/2. Second task/source/sass/global.scss
@@ -32,6 +32,7 @@ body {
   font-weight: $font-regular;
   font-style: $style-normal;
   min-width: 320px;
+  color: $text-color;
 }
 
 .visually-hidden {
