--- a/2. Second task/source/sass/style.scss
+++ b/2. Second task/source/sass/style.scss
@@ -4,4 +4,5 @@
 @import "global.scss";
 @import "blocks/main-header.scss";
 @import "blocks/main-navigation.scss";
+@import "blocks/breadcrumbs.scss";
 
