--- a/2. Second task/source/sass/style.scss
+++ b/2. Second task/source/sass/style.scss
@@ -5,4 +5,5 @@
 @import "blocks/main-header.scss";
 @import "blocks/main-navigation.scss";
 @import "blocks/breadcrumbs.scss";
+@import "blocks/slider.scss";
 
