--- a/2. Second task/source/sass/blocks/main-navigation.scss
+++ b/2. Second task/source/sass/blocks/main-navigation.scss
@@ -78,7 +78,7 @@
   justify-content: flex-end;
   align-items: center;
   display: none;
-  width: 33.3%;
+  width: calc(100% / 3);
   min-height: 24px;
 
   &--mobile {
